# SDLProyectoPractica

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  LoaderParams.h  SDLGameObject.cpp  SDLGameObject.h  SDLImagen.vcxproj  SDLImagen.vcxproj.filters  TextureManager.h  Tortuga.cpp  Tortuga.h  main.cpp
.github/workflows/: cmake-multi-platform.yml  main.yml
includes/: GameObject.h  SDLGameObject.h
src/: Game.cpp  TextureManager.cpp
x64/Debug/: SDLImagen.exe.recipe  SDLImagen.ilk  vc143.idb
x64/Debug/SDLImagen.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SDLImagen.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
